--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -3,6 +3,8 @@ action = eating
 id = 1
 spring.thymeleaf.cache = false
 
+logging.level.com.example.springboot.ConnDBWithMybatis=debug
+
 spring.devtools.restart.enabled = true
 spring.devtools.restart.additional-paths = com/example/springboot
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
