--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -108,6 +108,17 @@
             <version>2.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.10.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>5.14</version>
+        </dependency>
     </dependencies>
 
     <build>
