--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -4,17 +4,18 @@ id = 1
 spring.thymeleaf.cache = false
 
 logging.level.com.example.springboot.ConnDBWithMybatis=debug
+logging.level.com.example.springboot.withHtml.mapper=debug
 
 spring.devtools.restart.enabled = true
 spring.devtools.restart.additional-paths = com/example/springboot
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/SpringBootTest
+spring.datasource.url = jdbc:mysql://localhost:3306/SpringBootTest?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username = root
 spring.datasource.password = 443761474
 mybatis.type-aliases-package = com.example.springboot.entities
 mybatis.mapper-Locations = classpath:mappers/*Mapper.xml
 logging.level.org.springboot.demo.mapper = debug
-spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/htmlPackage/,classpath:/static/images/
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/htmlPackage/,classpath:/static/images/,file:/Users/zhengfei.wang/Documents/springbootfiles/video,file:/Users/zhengfei.wang/Documents/springbootfiles/images
 
 #下面这些是关于邮件的配置
 spring.mail.host = smtp.qq.com
